tweaking the ui

--- a/modules/theme/client/scss/main.scss
+++ b/modules/theme/client/scss/main.scss
@@ -19,8 +19,9 @@ $icon-font-path: '/packages/reywood_bootstrap3-sass/assets/fonts/bootstrap/' !de
 @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/code";
 @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/grid";
 @import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/tables";
-@import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/forms";
+//@import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/forms";
 //@import "{reywood:bootstrap3-sass}/assets/stylesheets/bootstrap/buttons";
+@import "components/forms";
 @import "components/button";
 
 // Bootstrap Components
@@ -65,4 +66,5 @@ $icon-font-path: '/packages/reywood_bootstrap3-sass/assets/fonts/bootstrap/' !de
 @import "components/nav";
 @import "components/footer";
 @import "components/at_form";
+
 
