--- a/modules/theme/client/scss/components/_footer.scss
+++ b/modules/theme/client/scss/components/_footer.scss
@@ -7,7 +7,7 @@
     text-align: center;
     width: 100%;
     background-color: $appcha-header-bg-color;
-    border-top: 1px solid $appcha-nav-border-color;
+    //border-top: 1px solid $appcha-nav-border-color;
     p {
       color: $appcha-content-color;
       margin: 15px;
