--- a/modules/theme/client/scss/components/_nav.scss
+++ b/modules/theme/client/scss/components/_nav.scss
@@ -1,24 +1,21 @@
 @import "../includes/variables";
 
+.nav {
+  background-color: $appcha-header-bg-color;
 
-nav.navbar-default {
-  background-color: $appcha-nav-bg-color;
-  border-color: $appcha-nav-border-color;
-
-  .navbar-brand{
-    line-height: $appcha-nav-height;
-    height: $appcha-nav-height;
-    padding-top: 0;
+  .brand-logo {
+    letter-spacing: 2px;
+    font-weight: 100;
+    color: #fff;
+    font-size: 2em;
+    padding:10px 0px;
+    display: inline-block;
   }
-  .navbar-nav {
-    line-height: $appcha-nav-height;
-    height: $appcha-nav-height;
-    padding-top: 0;
-    li a {
-      line-height: $appcha-nav-height;
-      height: $appcha-nav-height;
-      padding-top: 0;
+
+  .actions{
+    .action-link{
+      color: #fff;
     }
-
   }
+
 }
