--- a/modules/theme/client/scss/components/_base.scss
+++ b/modules/theme/client/scss/components/_base.scss
@@ -6,24 +6,15 @@ html {
 }
 
 body {
-  background-color: $appcha-content-bg-color;
-  color: $appcha-content-color;
-
-}
-
-a {
-  color: $appcha-link-color;
-  &:hover {
-    color: lighten($appcha-link-color, 10%);
+  background-color: $appcha-header-bg-color;
+  //color: $appcha-content-color;
+  &.authenticated{
+    background-color: #EBEFF2;
   }
 }
 
-input, button {
-  border-radius: 3px!important;
-
-}
-input[type='email'],
-input[type='text'],
-input[type='password'] {
-
+.container{
+  width: 100%;
+  max-width: none;
+  padding: 0 15px;
 }
