--- a/modules/theme/client/views/footer.html
+++ b/modules/theme/client/views/footer.html
@@ -1,9 +1,9 @@
 <template name="footer">
   <div id="footer">
-    <div class="container">
-      <p>
-        Built with <i class="fa fa-heart"> </i> by Hampton.io
-      </p>
-    </div>
+    <!--<div class="container">-->
+      <!--<p>-->
+        <!--Built with <i class="fa fa-heart"> </i> by Hampton.io-->
+      <!--</p>-->
+    <!--</div>-->
   </div>
 </template>
