--- a/modules/theme/client/views/nav.html
+++ b/modules/theme/client/views/nav.html
@@ -1,29 +1,26 @@
 <template name="nav">
-  <nav class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class=container>
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-8">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <span class="navbar-brand">
-            <img alt="UserAccounts" width="25" height="25" src="/imgs/ua-logo.png">
-          </span>
-        </div>
+  <div class="nav z-depth-1" role="navigation">
+    <div class="nav-wrapper container ">
+      <div class="actions">
+        <a id="logo-container" href="/" class="brand-logo">AppCha!</a>
+        <ul class="actions right">
+          <li>
+            <a href="#" data-activates='ddprofile' class="dropdown-button action-link">{{currentUserDisplayName}}</a>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8">
-          <ul class="nav navbar-nav">
-            <li class="{{isActiveRoute regex='home'}}"><a href="{{pathFor 'home'}}">Home</a></li>
-            <li class="{{isActiveRoute regex='private'}}"><a href="{{pathFor 'private'}}">Private</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            {{> atNavButton}}
-          </ul>
-        </div>
+            <ul id='ddprofile' class='right dropdown-content'>
+              <li><a href="#">My Profile</a></li>
+              <li><a href="#">My Account</a></li>
+              <li class="divider"></li>
+              <li><a href="{{pathFor 'sign-in'}}" class="js-logout">Log out</a></li>
+            </ul>
+          </li>
+        </ul>
+
+      </div>
+      <div class="sub-nav">
+        {{> Template.dynamic template=subnav}}
       </div>
     </div>
-  </nav>
+
+  </div>
 </template>
