--- a/modules/dashboard/client/views/sub_nav.html
+++ b/modules/dashboard/client/views/sub_nav.html
@@ -2,8 +2,8 @@
   <div class="row omega dashboard_subnav">
     <div class="col m4 push-m4 s12 ">
       <ul class="tabs">
-        <li class="tab col s3"><a class="active" href="#">Recent Projects</a></li>
-        <li class="tab col s3"><a  href="#">All Projects</a></li>
+        <li class="tab col s3"><a class="active" data-param="recent" href="#">Recent Projects</a></li>
+        <li class="tab col s3"><a data-param="all" href="#">All Projects</a></li>
       </ul>
     </div>
     <div class="col s4">
