--- a/modules/dashboard/client/views/sub_nav.html
+++ b/modules/dashboard/client/views/sub_nav.html
@@ -1,9 +1,10 @@
 <template name="dashboard_subnav">
   <div class="row omega dashboard_subnav">
-    <div class="col m4 push-m4 s12 ">
+    <div class="col m6 push-m3 s12 ">
       <ul class="tabs">
         <li class="tab col s3"><a class="active" data-param="recent" href="#">Recent Projects</a></li>
         <li class="tab col s3"><a data-param="all" href="#">All Projects</a></li>
+        <li class="tab col s3"><a data-param="starred" href="#">Starred Projects</a></li>
       </ul>
     </div>
     <div class="col s4">
