--- a/modules/theme/client/scss/pages/dashboard.scss
+++ b/modules/theme/client/scss/pages/dashboard.scss
@@ -24,6 +24,12 @@
       background-color: $blue-600;
     }
   }
+  h1, h2, h3{
+    font-weight: 100;
+    &.noproj{
+      margin-bottom: 75px;
+    }
+  }
 }
 
 .nav{
