--- a/modules/dashboard/client/views/no_projects.html
+++ b/modules/dashboard/client/views/no_projects.html
@@ -3,7 +3,7 @@
         <div class="col s8 push-s2">
             <h2 class="noproj">No projects here, do you want to create one? </h2>
             <p class="center-align">
-                <a class="waves-effect waves-light btn green"><i class="material-icons right">add</i>Create a new project</a>
+                <a href="{{pathFor 'projects.new'}}" class="waves-effect waves-light btn green"><i class="material-icons right">add</i>Create a new project</a>
             </p>
         </div>
     </div>
