--- a/modules/theme/client/scss/includes/_variables.scss
+++ b/modules/theme/client/scss/includes/_variables.scss
@@ -334,7 +334,7 @@ $appcha-nav-color: #555;
 $appcha-nav-height: 80px;
 $appcha-header-bg-color: color("light-blue", "base"); // #47A0FA;
 $appcha-header-color: #fff;
-
+$appcha-body-bg-color: #EBEFF2;
 $appcha-sub-header-bg-color: rgba(0, 0, 0, 0.1);
 $appcha-sub-header-color: #fff;
 
