--- a/modules/theme/client/scss/main.scss
+++ b/modules/theme/client/scss/main.scss
@@ -47,7 +47,10 @@
 @import "components/footer";
 @import "components/at_form";
 @import "components/grid";
+@import "components/appcha_modal";
 
 @import "pages/dashboard";
+
+@import "pages/projects_new";
 
 
