--- a/modules/theme/client/scss/components/_at_form.scss
+++ b/modules/theme/client/scss/components/_at_form.scss
@@ -2,6 +2,7 @@
   max-width: 1300px;
   min-width: 1100px;
   .auth-card {
+    border-radius: 2px;
     margin-top: 10em;
     margin-right: -15px;
     margin-left: -15px;
@@ -38,7 +39,7 @@
     }
     .at-form {
       min-height: 500px;
-      margin: 0 -11px 0px -11px;
+      margin: 0 -8px 0px -20px;
       background-color: white;
       padding: 75px;
       //color: #000;
